fixed bullet list items, spacing and bullet symbol

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -687,11 +687,25 @@ table {
   font-family: Optima-BoldItalic;
   font-weight: bolditalic;
   letter-spacing: 4.28px;
+  margin-bottom: 30px;
 }
 
 .lightBluePanels .factsAboutSuicide .factsContent ul {
   height: auto;
   width: 80vw;
+  color: black;
+  font-size: 23px;
+  font-family: Optima-Regular;
+  font-weight: normal;
+  letter-spacing: 1.93px;
+  line-height: 70px;
+  margin-bottom: 30px;
+  list-style-type: disc;
+}
+
+.lightBluePanels .factsAboutSuicide .factsContent ul li:nth-child(3) {
+  line-height: 28px;
+  padding: 21px 0;
 }
 
 .lightBluePanels .footerInfo {
